--- a/rebar.config
+++ b/rebar.config
@@ -1,23 +1,158 @@
-%%-*- mode: erlang -*-
-{erl_opts, [warnings_as_errors]}.
-{cover_enabled, true}.
-{edoc_opts, [{preprocess, true}]}.
+%% -*- mode: erlang; erlang-indent-level: 4; indent-tabs-mode: nil -*-
+%% -------------------------------------------------------------------
+%%
+%% Copyright (c) 2010-2017 Basho Technologies, Inc.
+%%
+%% This file is provided to you under the Apache License,
+%% Version 2.0 (the "License"); you may not use this file
+%% except in compliance with the License.  You may obtain
+%% a copy of the License at
+%%
+%%   http://www.apache.org/licenses/LICENSE-2.0
+%%
+%% Unless required by applicable law or agreed to in writing,
+%% software distributed under the License is distributed on an
+%% "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+%% KIND, either express or implied.  See the License for the
+%% specific language governing permissions and limitations
+%% under the License.
+%%
+%% -------------------------------------------------------------------
 
-{xref_checks, [undefined_function_calls]}.
+{erl_opts, [
+    no_debug_info,
+    warn_bif_clash,
+    warn_export_all,
+    warn_export_vars,
+    warn_obsolete_guard,
+    warn_unused_import,
+    {platform_define, "^(R|17)", 'NO_CONTRACT_OVERLOAD'},
+    {platform_define, "^(R|17)", 'NO_ERLANG_TIMESTAMP'},
+    {platform_define, "^(R|17)", 'NO_MONOTONIC_TIME'},
+    {platform_define, "^(R|17)", 'NO_ORDDICT_2'},
+    {platform_define, "^(R|17)", 'NO_RAND_MODULE'},
+    {platform_define, "^R", 'NO_MAP_TYPE'},
+    {platform_define, "^R", 'NO_NAMESPACED_TYPES'}
+]}.
 
-{deps, [{mochiweb, "2.12.2"}]}.
+{deps, [
+    {mochiweb,
+        {git, "https://github.com/basho/mochiweb.git",
+        {branch, "feature/riak-2903/rebar3"} }}
+]}.
 
-{eunit_opts, [
-              no_tty,
-              {report, {eunit_progress, [colored, profile]}}
-             ]}.
+{profiles, [
+    {check, [
+        {dialyzer, [
+            {warnings, [
+                error_handling,
+                race_conditions,
+                unknown,
+                unmatched_returns
+            ]}
+        ]},
+        {erl_opts, [
+            debug_info,
+            warnings_as_errors,
+            {d, 'BASHO_CHECK'}
+        ]},
+        {overrides, [
+            {add, mochiweb, [{erl_opts, [debug_info]}]}
+        ]},
+        {xref_checks, [
+            deprecated_function_calls,
+            deprecated_functions,
+            locals_not_used,
+            undefined_function_calls,
+            undefined_functions
+        ]}
+    ]},
+    {docs, [
+        {edoc_opts, [
+            {app_default, "http://www.erlang.org/doc/man"},
+            {preprocess, true},
+            {macros, [
+                {'EDOC', true},
+                {'BASHO_DOCS', true}
+            ]}
+        ]}
+    ]},
+    {prod, [
+        {erl_opts, [
+            warnings_as_errors,
+            {d, 'BASHO_PROD'}
+        ]}
+    ]},
+    {test, [
+        {cover_enabled, true},
+        {erl_opts, [
+            debug_info,
+            nowarn_export_all,
+            nowarn_unused_function,
+            nowarn_unused_import,               % EQC
+            warnings_as_errors,
+            {d, 'BASHO_TEST'}
+        ]},
+        {deps, [
+            {meck, {git, "git://github.com/basho/meck.git", {branch, "rebar3"}}},
+            {ibrowse, {git, "git://github.com/basho/ibrowse.git", {branch, "rkarol/rebar3"}}}
+       ]}
+    ]},
+    {validate, [
+        {erl_opts, [
+            strong_validation,
+            no_auto_import,
+            warn_bif_clash,
+            warn_deprecated_function,
+            warn_deprecated_type,
+            warn_export_all,
+            warn_export_vars,
+            warn_missing_spec,
+            warn_missing_spec_all,
+            warn_obsolete_guard,
+            warn_shadow_vars,
+            warn_untyped_record,
+            warn_unused_function,
+            warn_unused_import,
+            warn_unused_record,
+            warn_unused_vars,
+            {d, 'BASHO_VALIDATE'}
+        ]}
+    ]}
+]}.
 
-{profiles,
- [{test,
-   [{deps, [meck,
-            {ibrowse, {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.2"}}},
-            {eunit_formatters, {git, "git://github.com/seancribbs/eunit_formatters", {branch, "master"}}}
-           ]},
-    {erl_opts, [debug_info]}
-   ]}
- ]}.
+{brt_upstream, [
+    {upstream, {git, "https://github.com/webmachine/webmachine.git"}},
+    {mirror, upstream, master}
+]}.
+
+{plugins, [
+    {basho_rebar_tools,
+        {git, "https://github.com/basho/basho_rebar_tools.git",
+        {branch, "master"} }}
+]}.
+
+
+%% --------------------------------------------------------------------------------
+%% {erl_opts, [warnings_as_errors]}.
+%% {cover_enabled, true}.
+%% {edoc_opts, [{preprocess, true}]}.
+
+%% {xref_checks, [undefined_function_calls]}.
+
+%% {deps, [{mochiweb, "2.12.2"}]}.
+
+%% {eunit_opts, [
+%%               no_tty,
+%%               {report, {eunit_progress, [colored, profile]}}
+%%              ]}.
+
+%% {profiles,
+%%  [{test,
+%%    [{deps, [meck,
+%%             {ibrowse, {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.2"}}},
+%%             {eunit_formatters, {git, "git://github.com/seancribbs/eunit_formatters", {branch, "master"}}}
+%%            ]},
+%%     {erl_opts, [debug_info]}
+%%    ]}
+%%  ]}.
