rebar: Update mochiweb's repo

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
 {xref_checks, [undefined_function_calls]}.
 
 {deps,
- [{mochiweb, "2.9.0.*", {git, "git://github.com/basho/mochiweb.git", {tag, "v2.9.0p2"}}}
+ [{mochiweb, "2.9.0.*", {git, "https://github.com/ucp-ntfy/mochiweb", "608e6d4fbb5f22ad1554542fee007f0e5d85656c"}}
  ]}.
 
 {dev_only_deps,
