Fix compilation on 21.1

--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,6 @@
  ]}.
 
 {dev_only_deps,
- [{meck, "0.8.*", {git, "git://github.com/basho/meck.git", {tag, "0.8.2"}}},
+ [{meck, "0.8.*", {git, "https://github.com/eproxus/meck", {tag, "0.8.13"}}},
   {ibrowse, "4.*", {git, "git://github.com/basho/ibrowse.git", {tag, "v4.3"}}}
  ]}.
